# django

./: .coveragerc  .deepsource.toml  .editorconfig  .env  .eslintignore  .eslintrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .hgignore  .hintrc  .jshintignore  .jshintrc  .pa11yci  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  .whitesource  AUTHORS  ActiveStateNotes.md  AkiraYoshida  BRANCHES  BUG_FIX_SUMMARY.md  CHANGELOG.txt  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CareerOrien  Cryptid app  Dictionary in Python  Dockerfile  FUNDING.yml  Free course.md  GETTINGSTARTED.rst  Gruntfile.js  IMPLEMENTATION_SUMMARY.md  (+95 more)
.azure_pipelines/: ci.yml  steps.yml
.circleci/: config.yml
.claude/: DJANGO_SKILLS_PLAN.md  README.md  SKILLS_IMPROVEMENT_PLAN.md  SKILLS_INDEX.md  SKILL_CREATION_GUIDE.md
.codeboarding/: Application Core.md  Authentication & Security.md  Content & Asset Management.md  Core Utilities & File Handling.md  Data Management.md  Internationalization & Caching.md  User Interface & Forms.md  Web Processing.md  on_boarding.md
.devcontainer/: cmds.sh  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/scripts/: pattern_analyzer.py  sophisticated_test_analyzer.py  test_pattern_analyzer.py
.github/workflows/: accessibility.yml  ai-pr-reviewer.yml  ai-review.yml  benchmark.yml  cancel_runs.yml  check-commit-messages.yml  check-migrations.yml  check-test-migrations.yml  check_commit_messages.yml  check_pr_quality.yml  codeql-analysis.yml  codeql-banalysis.yml  coverage-comment.yml  coverage-tests.yml  coverage.yml  coverage_comment.yml  coverage_tests.yml  debug.yml  django.yml  docs.yml  dotnetcore.yml  fly_pr_preview.yml  labels.yml  linkcheck.yml  linters.yml  (+17 more)
.tx/: config
DjangonautsProject/: manage.py
Production/: manage.py
bergenWeb/: manage.py
biome-plugins/: use-logical-css-properties.grit
capitalist_site/: manage.py
channel/: __init__.py  adapters.py  request.py  response.py  utils.py  worker.py
channels/: __init__.py  adapters.py  apps.py  asgi.py  auth.py  channel.py  consumer.py  consumer_middleware.py  consumer_registry.py  database_layer.py  db.py  decorators.py  exceptions.py  hacks.py  handler.py  http.py  layers.py  log.py  message.py  middleware.py  package_checks.py  request.py  response.py  routing.py  sessions.py  signals.py  staticfiles.py  utils.py  worker.py
core/: context_processors.py  exceptions.py  signing.py  urlresolvers.py
dispatch/: dispatcher.py  license.txt
django/: __init__.py  __main__.py  shortcuts.py
django-docs/: build.py  db-api.txt  model-api.txt  templates.txt
django_venv/: pyvenv.cfg
djangoenv/: pyvenv.cfg
djenv/: pyvenv.cfg
docker/: Dockerfile  Dockerfile-postgis
docs/: Makefile  README  README.rst  add_ons.txt  admin.txt  admin_css.txt  apache_auth.txt  api_stability.txt  asgi.rst  authentication.txt  backend-requirements.rst  backends.rst  binding.rst  cache.txt  channel_layer_spec.rst  community.rst  concepts.rst  conf.py  contents.txt  contenttypes.txt  contributing.rst  contributing.txt  cross-compat.rst  csrf.txt  custom_model_fields.txt  databases.txt  databrowse.txt  db-api.txt  delay.rst  deploying.rst  design_philosophies.txt  distributions.txt  django-admin.txt  django_install.txt  documentation.txt  email.txt  faq.txt  faqs.rst  fastcgi.txt  files.txt  (+76 more)
env/: pyvenv.cfg
examples/: settings.py  urls.py  views.py
extras/: Makefile  README.TXT  csrf_migration_helper.py  django-environ  django_bash_completion  freedom_bash_completion  mango_bash_completion  polls.bat
forms/: fields.py
freedom/: __init__.py  shortcuts.py
http/: __init__.py  utils.py
js_client/: .babelrc  .eslintrc.js  .npmignore  README.md  banner.txt  esdoc.json  package.json
js_tests/: tests.html
loadtesting/: README.md
main/: settings.py  urls.py  wsgi.py
mango/: __init__.py  __main__.py  shortcuts.py
middleware/: csrf.py  gzip.py
myproject/: admin.py  db.sqlite3  manage.py  models.py
projectsite/: db.sqlite3  manage.py
rmigration_bug/: README.md  bugTest.py  manage.py  repro.sh  requirements.txt
sampleproject/: settings.py
scripts/: Activate.ps1  INSTALLED_FILES  activate  activate.bat  archive_eol_stable_branches.py  backport.sh  benchmark_estimated_count.py  check_commit_prefix.py  check_migrations.py  check_test_migrations.py  confirm_release.sh  do_django_release.py  make_css_logical.sh  manage_translations.py  prepare_commit_msg.py  rpm-install.sh  sync_translations.py  test_new_version.sh  tests.py  verify_release.sh
template/: defaultfilters.py  defaulttags.py  loader.py  response.py
templatetags/: future.py  tz.py
test/: html.py  signals.py  testcases.py  utils.py
test_project/: FIX_AdminSplitDateTime.md.txt  admin.py  db.sqlite3
testproject/: Dockerfile  Dockerfile.rabbitmq  README.rst  benchmark.py  docker-compose.rabbitmq.yml  docker-compose.redis.yml  docker-compose.yml  fabfile.py  locustfile.py  manage.py  requirements.benchmark.txt  requirements.txt  setup.py
tests/: .achecker.yml  .coveragerc  .python-version  =  Gruntfile.js  README.MD  README.rst  a_file  appcachetests.py  bench_settings.py  builddocs.py  conftest.py  custom_test_runner.py  django  doctest.py  mkd_run_admin_test.ksh  package.json  runtests.py  runtests2.py  runtests3.py  settings.py  shortcuts.py  sitecustomize.py  test_apostgres.py  test_asgi.py  test_binding.py  test_ci.py  test_delay.py  test_generic.py  test_generic_http.py  test_generic_websocket.py  test_handler.py  test_http.py  test_inmemorychannel.py  test_layers.py  test_management.py  test_mti_parent_link_ordering.py  test_mysql.py  test_mysql_local.py  test_pg_settings.py  (+20 more)
utils/: autoreload.py  baseconv.py  dateparse.py  decorators.py  dictconfig.py  html_parser.py  log.py  numberformat.py  safestring.py  six.py  synch.py  timezone.py  tzinfo.py  unittest.py  version.py
views/: static.py
(+18527 files in other folders)
