[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Thibaud"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "asgiref>=3.8.1",
    "sqlparse>=0.5.0",
    "tzdata; sys_platform == 'win32'",
]
authors = [
  {name = "Thibaud Software Foundation", email = "foundation@thibaudproject.com"},
]
description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Thibaud",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23.1.0"]
bcrypt = ["bcrypt>=4.1.1"]

[project.scripts]
thibaud-admin = "thibaud.core.management:execute_from_command_line"

[project.urls]
Homepage = "https://www.thibaudproject.com/"
Documentation = "https://docs.thibaudproject.com/"
"Release notes" = "https://docs.thibaudproject.com/en/stable/releases/"
Funding = "https://www.thibaudproject.com/fundraising/"
Source = "https://github.com/thibaud/thibaud"
Tracker = "https://code.thibaudproject.com/"

[tool.black]
target-version = ["py312"]
force-exclude = "tests/test_runner_apps/tagged/tests_syntax_error.py"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "thibaud"

[tool.setuptools.dynamic]
version = {attr = "thibaud.__version__"}

[tool.setuptools.packages.find]
include = ["thibaud*"]
