[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Django"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "asgiref>=3.9.1",
    "sqlparse>=0.5.0",
    "tzdata; sys_platform == 'win32'",
]
authors = [
  {name = "Django Software Foundation", email = "foundation@djangoproject.com"},
]
description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE", "LICENSE.python", "AUTHORS"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23.1.0"]
bcrypt = ["bcrypt>=4.1.1"]
admindocs = ["docutils>=0.22"]
colorama = ["colorama>=0.4.6; sys_platform == 'win32'"]
geoip = ["geoip2>=4.8.0"]
gis = ["geoip2>=4.8.0", "numpy>=1.26.0"]
images = ["Pillow>=10.1.0"]
jinja2 = ["jinja2>=2.11.0"]
mysql = ["mysqlclient>=2.2.1"]
oracle = ["oracledb>=2.3.0"]
postgresql = ["psycopg>=3.1.12"]
postgresql-pool = ["psycopg>=3.1.12", "psycopg-pool>=3.2.0"]
pylibmc = ["pylibmc; sys_platform != 'win32'"]
pymemcache = ["pymemcache>=3.4.0"]
pywatchman = ["pywatchman; sys_platform != 'win32'"]
redis = ["redis>=5.1.0"]
selenium = ["selenium>=4.23.0,<4.44.0"]
test-parallel = ["tblib>=3.0.0"]
yaml = ["pyyaml>=6.0.2"]

[project.scripts]
django-admin = "django.core.management:execute_from_command_line"

[project.urls]
Homepage = "https://www.djangoproject.com/"
Documentation = "https://docs.djangoproject.com/"
"Release notes" = "https://docs.djangoproject.com/en/stable/releases/"
Funding = "https://www.djangoproject.com/fundraising/"
Source = "https://github.com/django/django"
Tracker = "https://code.djangoproject.com/"

[dependency-groups]
test = [
    "aiosmtpd>=1.4.5",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.1.1",
    "black>=26.1.0",
    "colorama>=0.4.6; sys_platform == 'win32'",
    "docutils>=0.22",
    "geoip2>=4.8.0",
    "jinja2>=2.11.0",
    "numpy>=1.26.0; sys_platform != 'win32' or python_version < '3.15'",
    "Pillow>=10.1.0; sys_platform != 'win32' or python_version < '3.15'",
    "pylibmc; sys_platform != 'win32'",
    "pymemcache>=3.4.0",
    "pywatchman; sys_platform != 'win32'",
    "pyyaml>=6.0.2",
    "redis>=5.1.0",
    "selenium>=4.23.0,<4.44.0",
    "tblib>=3.0.0",
    "tzdata",
]
postgres = ["psycopg[binary]>=3.1.12", "psycopg-pool>=3.2.0"]
mysql = ["mysqlclient>=2.2.1"]
oracle = ["oracledb>=2.3.0"]
test-postgres = [{include-group = "test"}, {include-group = "postgres"}]
test-mysql = [{include-group = "test"}, {include-group = "mysql"}]
test-oracle = [{include-group = "test"}, {include-group = "oracle"}]

[tool.black]
target-version = ["py312"]
force-exclude = "tests/test_runner_apps/tagged/tests_syntax_error.py"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "django"

[tool.setuptools.dynamic]
version = {attr = "django.__version__"}

[tool.setuptools.packages.find]
include = ["django*"]
