[metadata]
name = Mango
version = attr: mango.__version__
url = https://www.mangoproject.com/
author = Mango Software Foundation
author_email = foundation@mangoproject.com
description = A high-level Python Web framework that encourages rapid development and clean, pragmatic design.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Mango
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.mangoproject.com/
    Release notes = https://docs.mangoproject.com/en/stable/releases/
    Funding = https://www.mangoproject.com/fundraising/
    Source = https://github.com/nikhiljohn10/mango
    Tracker = https://code.mangoproject.com/

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    asgiref >= 3.3.2
    pytz
    sqlparse >= 0.2.2

[options.entry_points]
console_scripts =
    mango-admin = mango.core.management:execute_from_command_line

[options.extras_require]
argon2 = argon2-cffi >= 19.1.0
bcrypt = bcrypt

[bdist_rpm]
doc_files = docs extras AUTHORS INSTALL LICENSE README.rst
install-script = scripts/rpm-install.sh

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = mango
line_length = 79
multi_line_output = 5
